--- a/app/src/main/res/layout/fragment_add_activity.xml
+++ b/app/src/main/res/layout/fragment_add_activity.xml
@@ -30,18 +30,18 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="50dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingTop="10dp"
             android:gravity="center_vertical|center_horizontal"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@mipmap/icons" />
 
             <TextView
@@ -53,7 +53,7 @@
                 android:gravity="center_horizontal"
                 android:text="@string/schedule_hint_string1"
                 android:textColor="@color/colorPrimary"
-                android:textSize="23dp" />
+                android:textSize="20dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -65,7 +65,7 @@
                 android:gravity="center_horizontal"
                 android:text="@string/schedule_hint_string2"
                 android:textColor="@color/bright_foreground_disabled_material_light"
-                android:textSize="19dp" />
+                android:textSize="17dp" />
 
             <TextView
                 android:id="@+id/txt_add_client"
