--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -68,19 +68,19 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="wrap_content"
-            android:layout_height="170dip" />
+            android:layout_height="160dip" />
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:layout_above="@+id/bottom_layout"
             android:id="@+id/viewindicate_layout">
 
             <me.relex.circleindicator.CircleIndicator
                 android:id="@+id/indicator"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="30dp"
                 android:gravity="center_vertical|center_horizontal"
                 app:ci_drawable="@mipmap/inactive"
                 app:ci_drawable_unselected="@mipmap/active"/>
@@ -100,9 +100,10 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="55dp"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
                 android:background="@color/schedule_create_appointment_bg_color"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="0dp"
                 android:paddingLeft="20dp">
 
                 <TextView
@@ -114,14 +115,14 @@
                     android:textColor="@color/schedule_title_bg_color"
                     android:textIsSelectable="false"
                     android:textStyle="bold"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:paddingLeft="40dp"
                 android:id="@+id/notification">
 
@@ -159,8 +160,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:paddingLeft="40dp"
                 android:id="@+id/account_info">
 
@@ -198,8 +199,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:paddingLeft="40dp"
                 android:id="@+id/privacy">
 
@@ -254,8 +255,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:paddingLeft="40dp"
                 android:id="@+id/help">
 
