not ready tey just want apk

--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/old_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="......."
+                    android:text=""
                     android:backgroundTint="@android:color/transparent"
                     android:textColor="@color/schedule_title_bg_color"
                     android:maxLines="1"
@@ -75,7 +75,7 @@
                     android:id="@+id/new_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="......."
+                    android:text=""
                     android:backgroundTint="@android:color/transparent"
                     android:textColor="@color/schedule_title_bg_color"
                     android:maxLines="1"
@@ -112,7 +112,7 @@
                     android:id="@+id/confirm_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="......."
+                    android:text=""
                     android:backgroundTint="@android:color/transparent"
                     android:textColor="@color/schedule_title_bg_color"
                     android:maxLines="1"
