--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,6 +138,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/add_layout"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -145,6 +146,7 @@
             android:gravity="center_vertical|center_horizontal">
 
             <ImageView
+                android:id="@+id/add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/plus" />
