--- a/app/src/main/res/layout/fragment_profile_address.xml
+++ b/app/src/main/res/layout/fragment_profile_address.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/img_close"
             android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:src="@mipmap/btn_close" />
@@ -32,7 +32,7 @@
         <ImageView
             android:id="@+id/confirm_edit"
             android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:src="@mipmap/checkmark"
