--- a/app/src/main/res/layout/fragment_profile_landing.xml
+++ b/app/src/main/res/layout/fragment_profile_landing.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -56,11 +56,11 @@
             <ImageView
                 android:id="@+id/img_edit"
                 android:layout_width="35dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="15dp"
-                android:src="@mipmap/icon_edit" />
+                android:layout_marginRight="5dp"
+                android:src="@mipmap/icon_edit"
+                android:layout_alignParentEnd="true" />
 
         </RelativeLayout>
 
@@ -118,9 +118,8 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="55dp"
+                android:layout_height="40dp"
                 android:background="@color/schedule_create_appointment_bg_color"
-                android:layout_marginTop="5dp"
                 android:paddingLeft="20dp">
 
                 <TextView
@@ -132,7 +131,7 @@
                     android:textColor="@color/schedule_title_bg_color"
                     android:textIsSelectable="false"
                     android:textStyle="bold"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <RelativeLayout
