--- a/app/src/main/res/layout/fragment_schedule_select_client.xml
+++ b/app/src/main/res/layout/fragment_schedule_select_client.xml
@@ -24,23 +24,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:gravity="center_horizontal"
             android:color="@color/white"
+            android:gravity="center_horizontal"
             android:text="Select Client"
             android:textIsSelectable="false"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <TextView
+        <ImageView
             android:id="@+id/done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/button_bg"
-            android:text="DONE"
-            android:layout_alignParentRight="true"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"/>
+            android:src="@mipmap/checkmark"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -67,14 +65,14 @@
                 android:background="@drawable/curve_editext"
                 android:drawableLeft="@android:drawable/ic_menu_search"
                 android:hint="Search Client by Name"
-                android:textSize="13sp"
                 android:paddingBottom="3dp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:paddingTop="3dp"
                 android:singleLine="true"
                 android:textColor="@android:color/black"
-                android:textColorHint="@android:color/darker_gray" />
+                android:textColorHint="@android:color/darker_gray"
+                android:textSize="13sp" />
 
         </RelativeLayout>
 
@@ -103,11 +101,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="10dp"
                     android:text="MAP"
                     android:textColor="@color/semi_transparent_black"
-                    android:layout_marginBottom="10dp"
                     android:textSize="13sp"
                     android:textStyle="bold" />
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -118,17 +117,17 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:gravity="bottom"
                 android:layout_weight="0.2"
+                android:gravity="bottom"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="10dp"
                     android:text="LAST VISITED"
                     android:textColor="@color/button_bg"
-                    android:layout_marginBottom="10dp"
                     android:textSize="13sp"
                     android:textStyle="bold" />
 
@@ -149,11 +148,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="10dp"
                     android:text="DISTANCE"
                     android:textColor="@color/semi_transparent_black"
-                    android:layout_marginBottom="10dp"
                     android:textSize="13sp"
                     android:textStyle="bold" />
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -171,11 +171,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="10dp"
                     android:text="ALPHA"
                     android:textColor="@color/semi_transparent_black"
-                    android:layout_marginBottom="10dp"
                     android:textSize="13sp"
                     android:textStyle="bold" />
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -190,10 +191,20 @@
             android:layout_height="1dp"
             android:background="@color/white" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/middle_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/upper_layout"
+        android:orientation="vertical">
+
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/schedule_create_appointment_bg_color"
+            android:paddingRight="20dp"
             android:paddingLeft="20dp">
 
             <TextView
@@ -204,23 +215,23 @@
                 android:text="0 - 5 MILES"
                 android:textColor="@color/schedule_title_bg_color"
                 android:textIsSelectable="false"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
+
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:listSelector="@android:color/transparent"
+            android:scrollbars="none" />
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/contacts_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_layout"
-        android:layout_below="@+id/upper_layout"
-        android:listSelector="@android:color/transparent"
-        android:scrollbars="none" />
 
     <RelativeLayout
         android:id="@+id/bottom_layout"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -228,17 +239,16 @@
             android:id="@+id/txt_continue"
             android:layout_width="fill_parent"
             android:layout_height="45dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/button_bg"
+            android:gravity="center_vertical|center_horizontal"
             android:text="CONTINUE"
             android:textColor="@color/white"
             android:textSize="18dp"
-            android:textStyle="bold"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_alignParentBottom="true"
-            android:background="@color/button_bg" />
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
-
 
 
 </RelativeLayout>
