--- a/app/src/main/res/layout/schedule_select_client_list_item.xml
+++ b/app/src/main/res/layout/schedule_select_client_list_item.xml
@@ -22,7 +22,7 @@
             android:src="@mipmap/avatar_profile" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_toLeftOf="@+id/check"
@@ -34,6 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/name"
+                android:maxLines="1"
                 android:textColor="@color/schedule_title_bg_color"
                 android:text="Poradic Line"
                 android:textStyle="bold"
@@ -55,6 +56,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/address"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:text="786 Cowin Club"
                     android:textColor="@color/schedule_title_bg_color"
@@ -85,16 +88,15 @@
 
             </LinearLayout>
 
-
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/check"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/circle_uncheck" />
+        <!--<ImageView-->
+            <!--android:id="@+id/check"-->
+            <!--android:layout_width="35dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:src="@mipmap/circle_uncheck" />-->
     </RelativeLayout>
 
     <View
