--- a/app/src/main/res/layout/schedule_clients_cardview_item.xml
+++ b/app/src/main/res/layout/schedule_clients_cardview_item.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="160dp"
     android:layout_height="180dp"
+    android:layout_marginRight="15dp"
     android:background="@drawable/curve_white_background_with_stroke"
     android:padding="10dp">
 
